portifolio/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root{
    --color-text:#00131B;
    --color-error:#FC440F;
    --color-success:#04E762;
    --color-paper:#E5E5E5;
    --color-primary:#5C7AFF;
    --color-primary-light:#859BFF;
    --color-primary-superlight:#ADBCFF;
    --color-primary-dark:#0029E0;
    --color-secondary:#F1DAC4;
    --color-white:#FFFFFF; 
}
*{
    transition: 400ms;
    ::selection{
        background-color: var(--color-secondary);
        color: var(--color-text);
    }
}
html, body{
    @apply w-screen h-screen text-text
}
.liHeader{
    @apply shadow-md
    w-10
    p-[0.5rem] 
    rounded-full 
    cursor-pointer
}
.buttonHeaderShadowNone{
    @apply hover:scale-105
    px-10 
    py-2
    w-3/4
    rounded
    flex
    justify-center
    gap-3
}
.buttonHeader{
    @apply buttonHeaderShadowNone
    shadow-md
}

.buttonBackHome{
    @apply hover:scale-105
    text-center
    rounded
    bg-[var(--color-white)]
    text-[var(--color-primary)]
    shadow-md
    flex
    justify-center
    items-center
    py-2
    px-6
    gap-3
    absolute
    top-3
    left-3
}

